refactor(build): rewrite build scripts to reduce duplicated code